--- a/index.css
+++ b/index.css
@@ -101,6 +101,7 @@ p.todolist {
     text-decoration: none;
     color: white;
     text-shadow: 1px 1px 2px rgb(51, 51, 51), 0px 0px 5px #565656;
+    font-size: 1.1rem;
 }
 
 p#location, p#author {
@@ -201,13 +202,14 @@ p.weather-temp {
 
 .todosubmit {
     padding: 8px 12px;
-    width: fit-content;
+    width: 150px;
+    text-align: center;
     border-radius: 5px;
     background-color: #535353;
     border: none;
     font-size: 0.9rem;
     font-weight: 600;
-    margin: 0 auto;
+    margin: 6px auto 0;
     box-shadow: 0px 4px 10px -10px black;
     cursor: pointer;
 }
@@ -227,6 +229,7 @@ p.weather-temp {
     margin: 1px 2px 5px 3px;
     padding: 2px 0;
     font-weight: 700;
+    font-size: 1.1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -313,108 +316,6 @@ li a:hover {
     cursor: pointer;
     height: 15px;
     margin-bottom: 3px;
-}
-
-/* ************** CALCULATOR ************** */
-
-.calculator {
-    height: 260px;
-    width: 440px;
-    display: none;
-    background-color: rgba(255, 255, 255, 0.85);
-    border-radius: 12px;
-    padding: 9px 5px 10px 5px;
-    margin-top: 20px;
-    box-shadow: 1px 1px 15px rgb(87, 87, 87);;
-}
-
-.calc {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.calc img {
-    cursor: pointer;
-    margin-top: 0px;
-}
-
-.calc--inner {
-    height: 240px;
-    width: 430px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.calc--inner--top {
-    height: 80px;
-    border: 1px solid black;
-    width: 416px;
-    border-radius: 8px;
-    margin-top: 3px;
-    background-color: rgba(255, 255, 255, 0.85);
-    box-shadow: inset 1px 1px 3px rgb(87, 87, 87);;
-}
-
-.calc--inner--bottom {
-    height: 300px;
-    width: 420px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 5px;
-}
-
-.calc--inner--bottom > div {
-    border: 1px solid black;
-    width: 80px;
-    height: 40px;
-    border-radius: 8px;
-    margin: 2px;
-    background-color: rgba(224, 224, 224, 0.85);
-    box-shadow: 1px 1px 2px rgb(87, 87, 87);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(51, 51, 51);
-    text-shadow: none;
-    font-size: 1.5rem;
-    font-weight: 900;
-}
-
-.calc--inner--bottom > div:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;
-    cursor: pointer;
-}
-
-.calc--inner--bottom > div:active {
-    box-shadow: none;
-    border: 1px solid rgb(74, 74, 74);
-}
-
-div.stretch {
-    width: 164px;
-}
-
-div.special {
-    background: rgba(250, 197, 99, 0.7);
-}
-
-div.special:hover {
-    background: rgba(242, 183, 74, 0.9);
-}
-
-div.leftspecial {
-    background-color: rgba(249, 127, 93, 0.6);
-}
-
-div.leftspecial:hover {
-    background-color: rgb(214, 129, 110);
 }
 
 /* ************** MEDIA QUERIES ************** */
