Completed changes for 060822

--- a/index.css
+++ b/index.css
@@ -71,27 +71,37 @@ h2 {
     font-weight: bold;
 }
 
-.author, .location {
+.photographer, .location {
     display: flex;
     align-items: flex-end;
     font-size: 0.8rem;
+    margin-top: -10px;
 }
 
-.author {
-    margin-bottom: -10px;
+.photodeets {
+    display: flex;
 }
 
-.author span, .location span {
+.photodeets img {
+    margin-right: 15px;
+    height: 40px;
+}
+
+.photographer {
+    margin-top: 5px;
+}
+
+.photographer span, .location span {
     font-weight: normal;
 }
 
-.author p, .todolist p {
+.photographer p, .todolist p {
     margin: 0;
     padding: 0;
 }
 
 p.todolist {
-    margin-top: -2px;
+    margin-bottom: -3px;
 }
 
 .td, .weather {
@@ -110,7 +120,7 @@ p.todolist {
     margin-right: 1px;
 }
 
-p#location, p#author {
+p#location, p#photographer {
     margin-bottom: 0;
 }
 
@@ -144,7 +154,7 @@ p.weather-temp {
 
 .links {
     width: 300px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
     right: 10px;
     bottom: 45px;
@@ -164,10 +174,10 @@ p.weather-temp {
 
 .todoitems {
     width: 300px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
     left: 10px;
-    top: 50px;
+    bottom: 45px;
     border-radius: 15px;
     text-align: left;
     padding-left: 10px;
@@ -182,7 +192,7 @@ p.weather-temp {
     display: flex;
     flex-direction: column;
     width: 280px;
-    margin: 10px 0;
+    margin: 10px 0 0;
 }
 
 .todosinput {
@@ -243,6 +253,11 @@ p.weather-temp {
     display: flex;
 }
 
+.linkbtns {
+    display: flex;
+    margin-bottom: -10px;
+}
+
 .todosubmit:hover {
     background-color: #8c8b8b;
 }
@@ -294,7 +309,7 @@ img.closetodos {
 
 .closelinks {
     margin-top: -7px;
-    margin-right: 3px;
+    margin-right: 5px;
     cursor: pointer;
 }
 
@@ -318,8 +333,12 @@ img.closetodos {
 
 ul {
     list-style-type: none;
-    margin-top: 0;
+    margin-top: 10px;
     display: block;
+}
+
+.listul ul {
+    margin-top: 5px;
 }
 
 ul div {
@@ -331,6 +350,10 @@ ul div {
 ul div img {
     margin-right: 10px;
     cursor: pointer;
+}
+
+.linksul img {
+    margin-right: 2px;
 }
 
 ul li {
@@ -363,6 +386,11 @@ li a:hover {
     cursor: pointer;
 }
 
+.linksul div {
+    margin-top: 10px;
+    margin-bottom: -10px;
+}
+
 .linkslist, .todolist {
     font-size: 1.2rem;
     font-weight: 700;
@@ -375,9 +403,9 @@ li a:hover {
 
 #imagesettings {
     cursor: pointer;
-    height: 15px;
-    margin-bottom: 2px;
-    margin-left: -1px;
+    height: 30px;
+    margin-top: 5px;
+    margin-left: 0px;
 }
 
 /* ************** MEDIA QUERIES ************** */
