--- a/index.css
+++ b/index.css
@@ -102,6 +102,7 @@ h2 {
 
 p.todolist {
     margin-bottom: -3px;
+    margin-left: 40px;
 }
 
 .td, .weather {
@@ -117,7 +118,8 @@ p.todolist {
 
 .linkslist {
     margin-bottom: -3px;
-    margin-right: 1px;
+    margin-right: 55px;
+
 }
 
 p#location, p#photographer {
@@ -403,9 +405,33 @@ li a:hover {
 
 #imagesettings {
     cursor: pointer;
-    height: 30px;
-    margin-top: 5px;
+    height: 45px;
+    margin-top: 0px;
     margin-left: 0px;
+}
+
+#todoimage, #linksimage {
+    cursor: pointer;
+}
+
+.todocorner, .linkscorner {
+    display: flex;
+}
+
+.linkscorner img {
+    width: 60px;
+    height: 60px;
+    position: fixed;
+    right: -1px;
+    bottom: 0;
+}
+
+.todocorner img {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
 
 /* ************** MEDIA QUERIES ************** */
