--- a/index.css
+++ b/index.css
@@ -2,7 +2,12 @@
     box-sizing: border-box;
 }    
 
+
+
 body {
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
     margin: 0;
     background: no-repeat center center fixed; 
     -webkit-background-size: cover;
@@ -13,6 +18,15 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-shadow: 1px 1px 2px rgb(51, 51, 51), 0px 0px 5px #565656;
     font-size: 16px;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 main {
@@ -432,6 +446,14 @@ li a:hover {
     position: fixed;
     left: 0;
     bottom: 0;
+}
+
+.hover {
+    color: blue;
+}
+
+.weathericon {
+    text-shadow: 2px 2px 2px black;
 }
 
 /* ************** MEDIA QUERIES ************** */
