--- a/index.css
+++ b/index.css
@@ -2,8 +2,6 @@
     box-sizing: border-box;
 }    
 
-
-
 body {
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
@@ -204,6 +202,10 @@ p.weather-temp {
     box-shadow: 0px 0px 10px rgb(66, 66, 66);
 }
 
+.italicsquote {
+    font-style: italic;
+}
+
 .todosform {
     display: flex;
     flex-direction: column;
@@ -311,6 +313,10 @@ p.weather-temp {
     align-items: center;
     color: black;
     text-shadow: none;
+}
+
+#linkslabel {
+    padding-left: 2px;
 }
 
 img.closetodos {
