--- a/index.css
+++ b/index.css
@@ -294,6 +294,7 @@ p.weather-temp {
 
 .todobtns {
     display: flex;
+    margin-bottom: -2px;
 }
 
 .linkbtns {
@@ -473,7 +474,7 @@ li a:hover {
     height: 60px;
     position: fixed;
     right: -1px;
-    bottom: 0;
+    bottom: -10px;
 }
 
 .todocorner img {
