--- a/index.css
+++ b/index.css
@@ -181,6 +181,9 @@ p.weather-temp {
 
 .links {
     width: 300px;
+    max-height: 80vh;
+    overflow-y: auto;
+    overflow-x: auto;
     background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
     right: 10px;
@@ -201,6 +204,9 @@ p.weather-temp {
 
 .todoitems {
     width: 300px;
+    max-height: 80vh;
+    overflow-y: auto;
+    overflow-x: auto;
     background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
     left: 10px;
