--- a/index.css
+++ b/index.css
@@ -409,10 +409,6 @@ ul div img {
     margin-right: 2px;
 }
 
-ul li {
-    cursor: pointer;
-}
-
 ul li.checked {
     color: rgb(188, 3, 3);
     text-decoration: line-through;
@@ -425,6 +421,13 @@ li {
     color: black;
     text-shadow: none;
     font-size: 1rem;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+li a {
+    text-decoration: none;
+    color: blue;
 }
 
 li.list--item {
@@ -434,7 +437,7 @@ li.list--item {
 }
 
 li a:hover {
-    color: rgb(247, 207, 4);
+    color: rgb(22, 84, 1);
     z-index: 10;
     cursor: pointer;
 }
