--- a/index.css
+++ b/index.css
@@ -286,16 +286,32 @@ p.weather-temp {
     color: white;
 }
 
+.todoclear {
+    font-weight: 700;
+}
+
 .todosubmit {
     margin-left: 4px;
+    padding-top: 13px;
+}
+
+#todosubmit {
+    padding-top: 13px;
+    padding-bottom: -1px;
 }
 
 #todoclear {
     margin-left: 8px;
+    padding-top: 12px;
+}
+
+#linksclear {
+    padding-top: 13px;
 }
 
 #linksubmit {
     margin-left: 5px;
+    padding-top: 14px;
 }
 
 .todobtns {
@@ -310,6 +326,7 @@ p.weather-temp {
 
 .todosubmit:hover {
     background-color: #8c8b8b;
+    text-shadow: 1px 1px 2px rgb(51 51 51), 0px 0px 5px #565656;
 }
 
 .todoclear:hover {
